--- a/src/index.css
+++ b/src/index.css
@@ -385,3 +385,7 @@ form .singup_link a{
 form .singup_link a:hover{
 	text-decoration: underline;
 }
+
+.box-shadow {
+	box-shadow: 0px 5px 5px rgba(0,0,0,0.2);
+}
