--- a/src/index.css
+++ b/src/index.css
@@ -12,29 +12,17 @@
 
 body{
 	background-size: cover;
-	background-color: #70b57880;
+	background-color: #eae2b7;
 	font-family: georgia, times, serif;
+}
+
+section{
+	background-color: #eae2b7;
 }
 
 .main{
 	padding-top: 10rem;
-  background-color: #70b57880;
-}
-
-.section{
-	background: #70b57880;
-	margin-top: 10px;
-	margin-left: 100px;
-	width: 1100px;
-	padding: 10px;
-	float: center;
-}
-
-.footer{
-	background: #70b57880;
-	padding: 5px;
-	clear: both;
-	margin-top: 10px;
+  background-color: #eae2b7;
 }
 
 .container{
@@ -48,7 +36,7 @@ body{
 }
 
 .header{
-	background: #70b57880;
+	background: #eae2b7;
 	color: white;
 
 	position: fixed;
@@ -91,7 +79,7 @@ body{
 }
 
 .navigation ul li a:hover{
-	background: #70b578;
+	background: #eae2b780;
 }
 
 .submenu{
@@ -122,7 +110,7 @@ h3{
 }
 
 .linea{
-	background: #550b51;
+	background: #003049;
 	height: 5px;
 	width: 100%;
 	display: block;
@@ -162,7 +150,7 @@ h3{
 	position: fixed;
 	top: 0;
 	left: 0;
-	background: #70b57880;
+	background: #eae2b780;
 	transition: transform .3s ease-in-out;
 	width: 100%;
 	height: 100%;
@@ -238,7 +226,7 @@ h3{
 	padding: 10px 20px;
 	font-size: 20px;
 	font-weight: 500;
-	color: #70b578;
+	color: #eae2b780;
 	cursor: pointer;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
 }
@@ -288,7 +276,7 @@ input[type="checkbox"]{
 }
 
 .cont_login .close_btn:hover{
-	color: #70b578;
+	color: #eae2b780;
 
 }
 
@@ -321,7 +309,7 @@ form .data input{
 }
 
 form .data input:focus{
-	border-color: #70b578;
+	border-color: #eae2b780;
 	border-bottom-width: 6px;
 }
 
@@ -330,7 +318,7 @@ form .forgot_pass{
 }
 
 form .forgot_pass a{
-	color: #70b578;
+	color: #eae2b780;
 	text-decoration: none;
 }
 
@@ -378,7 +366,7 @@ form .singup_link{
 }
 
 form .singup_link a{
-	color: #70b578;
+	color: #eae2b780;
 	text-decoration: none;
 }
 
